Copyright (c) 2002-2008 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.1 (unreleased)

    Features added:

      - #200507: ZMI titles now appear for Silva objects.  The title
        is retrieved from the object's metadata.

      - Refactoring functional tests, built SilvaBrowser API for
        basic Silva functional tests.

      - Took out automatic install of SilvaFind when making a new
        Silva root.  Added SilvaFind to SilvaTestCase.py

      - The css for form button controls has been refactored. There is
        now a standard class, 'button', which can be modified by
        adding a second class name, the action type which the button
        performs. These actions are: manipulator, transporter,
        executor, remover, and canceler. E.g.  class="button
        transporter".

      - Since the full media export is restricted to Chief Editors and
        up, there's no reason to show the import or export buttons to
        lower level roles (since the pure xml import/export is
        deprecated).  Conditioned the buttons.

      - Modernized buttons and matrix nav based on trainee
        feedback. Use a float for button alignment classes or obviate
        the spaces in html.

      - Renovated the Kupu image toolbox to make it more userfriendly.
        Improved the alignments in the table toolbox.

      - New "Editor Comments" Kupu Tool: displays the "internal
        comments" silva-extra metadata field if there are
        comments. This promotes the visibility of internal / editor
        comments so that anyone editing the document will see them.
        This tool is only visible if there are comments, and does not
        allow editing at this time.  This toolbox is non-collapsible,
        and requires a version of kupu newer than 1.4b1 to support
        non-collapsible toolboxes.

      - Support for direct username assignment to clipboard. If the